- Fixed the masskill bug with replacing "Server Exists" code.. i removed it
  accidentialy last time
- Added /botserv /bs command, patch by ATHnet.de
- /who's now show +i users for opers in channels, idea by
  Strider@ChatCircuit
- Fixed NO_OPEROVERRIDE bug reported by otherguy
- #define STATSWRITING will make ircd write ircd.stats every 4 seconds,
  idea/sortof by WaveRide
    Format of ircd.stats:
       <global users>
       <global invisible users>
       <global servers>
       <irc operators>
       <unknown connections>
       <local clients>
       <local servers>
       <local max clients>
       <global max clients>
- Fixed +d (deaf) so it works again
- Removed some leftovers from the &channel code (which fixed a minor bug as well)
- Fixed a SJOIN3<->services problem
- Fixed a typo where it still said +I instead of +V in an error message
- Fixed the "Bad file descriptor" bug in SSL. This bugfix may be a bit risky
  as it is manipulating BIO fds. The reason openssl freaked at this, was
  that when a fd is closed, we change fds from 4 to 3 etc, in other words,
  we renumber fds. SSL didn't know this and if you would call SSL_set_fd it
  would close the connection/crash. Added SSL_change_fd() to change the FD
  directly through BIO_set_fd. 
- Fixed the masskill bug, hopefully. Was a delimiter/number array bug in
  find_server_b64_or_real, causing negative base64 to be accepted (bad).
  value 1-256 will never be able to be in two letters (a server name)
- Fixed \r\n bug, hopefully
- made SSL use same cert client/server
- Fixed help.c bug reported by Curt|s
- Different fixes, unreal.tspre.org -> unrealircd.com
- Fixed-fixed-fixed the \r\n bug and removed some useless cpu wasting code
- Removed remapping fds, and did a severe select() speedup, suggested by
  Demiurgus. Should speed CPU a lot
- Updated some messages
- Fixed-fixed-fixed the U:line branching thing made by codemastr
- Fixed a G: line-turn-into Z:line problem, reported by eYe-Man