@@ -790,6 +790,11 @@ void sendto_serv_butone_token_opt(aClient *one, int opt, char *prefix, char *com
 			continue;
 		if ((opt & OPT_SJ3) && !SupportSJ3(cptr))
 			continue;
+		if ((opt & OPT_SJB64) && !(cptr->proto & PROTO_SJB64))
+			continue;
+		if ((opt & OPT_NOT_SJB64) && (cptr->proto & PROTO_SJB64))
+			continue;
+		
 		if (IsToken(cptr))
 		{
 			if (SupportNS(cptr) && pref[0])
